config/nextcloud_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  ingressClassName: nginx
  rules:
    - host: "intra.company.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
    - host: "intra.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
